--- a/core/templates/core/dna_display.html
+++ b/core/templates/core/dna_display.html
@@ -521,13 +521,13 @@
                         <a
                             href="{% url 'core:home' %}"
                             class="bg-brand-purple border-brand-text shadow-neo-sm hover:bg-opacity-90 block w-full border-2 px-4 py-2 text-center font-bold"
-                            >Update Readprint</a
+                            >Update Bibliotype</a
                         >
                     </div>
                 </div>
             {% else %}
                 <div class="bg-brand-purple border-brand-text shadow-neo border-2 p-6 text-center">
-                    <h2 class="text-2xl font-bold uppercase">Enjoying Your Readprint?</h2>
+                    <h2 class="text-2xl font-bold uppercase">Enjoying Your Bibliotype?</h2>
                     <p class="mt-2 text-lg">
                         <a href="{% url 'core:signup' %}" class="hover:bg-brand-yellow underline"
                             >Create a free account</a
